--- a/quasi_stationary_models/quasi_stationary_models.vcxproj.filters
+++ b/quasi_stationary_models/quasi_stationary_models.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="quasi_stationary_models.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Block_1_transport_equation.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Block_1_transport_equation.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Input_struct.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
