Реализован метод характристик с одной входной новой партией

--- a/quasi_stationary_models/quasi_stationary_models.vcxproj
+++ b/quasi_stationary_models/quasi_stationary_models.vcxproj
@@ -131,6 +131,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,6 +146,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -183,11 +185,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Block_1_transport_equation.cpp" />
+    <ClCompile Include="Transport_equation.cpp" />
     <ClCompile Include="quasi_stationary_models.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Block_1_transport_equation.h" />
+    <ClInclude Include="Transport_equation.h" />
     <ClInclude Include="Input_struct.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
