На пути к расчету давления в каждой точке

--- a/quasi_stationary_models/quasi_stationary_models.vcxproj
+++ b/quasi_stationary_models/quasi_stationary_models.vcxproj
@@ -185,10 +185,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Count_pressure_Eyler.cpp" />
+    <ClCompile Include="Hydraulic_resistance_coefficient.cpp" />
+    <ClCompile Include="Task_QP_Eyler.cpp" />
     <ClCompile Include="Transport_equation.cpp" />
     <ClCompile Include="quasi_stationary_models.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Count_pressure_Eyler.h" />
+    <ClInclude Include="Hydraulic_resistance_coefficient.h" />
     <ClInclude Include="Transport_equation.h" />
     <ClInclude Include="Input_struct.h" />
   </ItemGroup>
