Реализовано 2 отдельных класса для расчета давлений в задаче 1 и задаче 2, везде кодировка UTF8

--- a/quasi_stationary_models/quasi_stationary_models.vcxproj.filters
+++ b/quasi_stationary_models/quasi_stationary_models.vcxproj.filters
@@ -21,13 +21,13 @@
     <ClCompile Include="Transport_equation.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Task_QP_Eyler.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Count_pressure_Eyler.cpp">
+    <ClCompile Include="Count_pressure_Eyler_Task_2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Hydraulic_resistance_coefficient.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Count_pressure_Eyler_Task_1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -38,10 +38,16 @@
     <ClInclude Include="Transport_equation.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="Count_pressure_Eyler.h">
+    <ClInclude Include="Count_pressure_Eyler_Task_2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Hydraulic_resistance_coefficient.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Time_series.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Count_pressure_Eyler_Task_1.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
