Develop 19 03 24(задание 2 временные сетки) (#2)
* На пути к расчету давления в каждой точке

* Продолжаю работать над давлением

* Давление считается в каждой точук, далее работаю с отображением на графике

* Добавлен файл с выводом данных на график. Требуется рефакторинг

* Задача 2. Переход на гугл тесты, интерполяция расхода, временные ряды

* Успешный расчет методом характеристик при учете синтетического временного ряда расхода. Дальше в разработке надо учеть временные ряды параметров нефти

* Исправлена ошибка прошлого комита

* работа над алгоритмом интерполяции давления

* Модель учитывает временной ряд давления

* Интерполируется расход, интерполируется давление, считается распределние давления по трубе, интерполируются параметры нефти с учктом временного ряда

* Верно решена задача 2, нужен рефакторинг под ООП + изменить кодировки

* utf8

* все файлы UTF8

* Реализовано 2 отдельных класса для расчета давлений в задаче 1 и задаче 2, везде кодировка UTF8

* Решены 2 задачи блока 3. Требуется проверка и рефакторинг

* изменил гитигнор, не видно файла вывода

* Ответ для каждой задачи выводится в отдельный файл

* На гитхабе не отображаются файлы вывода

* Решена задача 1

* Задача 2 с импульсной партией

* Решена 1 и 2 задачи блока 2

* Отладил. все отлично

---------

Co-authored-by: eldar <eldar@ASER_ASPIRE_7E>
Co-authored-by: bilyalov <bilyalov@ELDAR>

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ mono_crash.*
 [Rr]eleases/
 x64/
 x86/
+Output.csv
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
@@ -361,3 +362,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+Output_task_2.csv
+Output_task_1.csv
